ESOOOOOOO PATRONAAAAAA DAvid pls no mas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="hint_pregunta">Question</string>
 
     <string name="btn_emergencia">EMERGENCY</string>
+    <string name="btn_salir">I have arrived</string>
 
 
 </resources>
